--- a/templating/templating.routing.yml
+++ b/templating/templating.routing.yml
@@ -15,3 +15,12 @@ templating.create:
     _title: 'Create  Template'
   requirements:
     _permission: 'allowed create template'
+templating.diff:
+  path: '/admin/templating/diff'
+  defaults:
+    _form: '\Drupal\templating\Form\ConfigDiffForm'
+    _title: 'Templating Diff'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
