--- a/workflow_buttons/modules/workflow_buttons_trash/config/optional/workflows.workflow.workflow_buttons_trash_publishing.yml
+++ b/workflow_buttons/modules/workflow_buttons_trash/config/optional/workflows.workflow.workflow_buttons_trash_publishing.yml
@@ -13,7 +13,7 @@ dependencies:
 _core:
   default_config_hash: C0jZewM2mDrvz1X6CgI-Z0c5suz-odCZu1SKLKhotjo
 id: workflow_buttons_trash_publishing
-label: 'Publishing (with draft and soft delete)'
+label: "Publishing (with draft and soft delete)"
 type: content_moderation
 type_settings:
   states:
@@ -60,19 +60,19 @@ type_settings:
         - draft
         - unpublished
     restore_draft:
-      label: 'Restore to Draft'
+      label: "Restore to Draft"
       from:
         - trash
       to: draft
       weight: 2
     restore_publish:
-      label: 'Restore and Publish'
+      label: "Restore and Publish"
       from:
         - trash
       to: published
       weight: 3
     save_draft_leave_current_published:
-      label: 'Create draft (leave current version published)'
+      label: "Create draft (leave current version published)"
       from:
         - published
       to: draft
