--- a/diff/diff.info.yml
+++ b/diff/diff.info.yml
@@ -1,11 +1,10 @@
 name: Diff
 type: module
 description: Shows changes between content revisions.
-# core: 8.x
+core_version_requirement: ^9.3 || ^10
 configure: diff.general_settings
 
-# Information added by Drupal.org packaging script on 2018-06-28
-version: '8.x-1.0-rc2'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2024-04-12
+version: '8.x-1.3'
 project: 'diff'
-datestamp: 1530178427
+datestamp: 1712883860
